--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,10 @@ services:
   - type: web
     name: trends-api
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python3 app.py
     plan: free
-    region: singapore
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
+    autoDeploy: true
     envVars:
       - key: RENDER_PYTHON_VERSION
         value: 3.11.11
