--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,6 @@ services:
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
+    pythonVersion: 3.11
     plan: free
     region: oregon
