--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: keyword-api-server
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python3 app.py        # ← ここを変更！
-    pythonVersion: 3.11                 # ← この行も追加！
     plan: free
     region: oregon
+    buildCommand: pip install -r requirements.txt
+    startCommand: python app.py
+    pythonVersion: 3.11
