--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,5 @@ services:
     plan: free
     region: oregon
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: gunicorn app:app
     pythonVersion: 3.11
